--- a/1.html
+++ b/1.html
@@ -13,7 +13,10 @@
   <li><a href="3.HTML">Java Script</a></li>
 </ol>
 <H2>HTML</H2>
+<P><iframe width="640" height="360" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></P>
+
 <p>I train html to start <a title="검색창으로 이동하기" href="http://www.naver.com" target="_blank">a new life.</a><br> I hope this challenge opens a new gate to become a specialist who can not be replaced by anyone.<br> Eventhough I cannot sure that I live correctly, I will go straight continually.</p><img src="gate.jpg" width="100%">
-<p>Today, I learned some new tags. It helps me to make my article on my website more beautiful visually</p>.
+<p>Today, I learned some new tags. It helps me to make my article on my website more beautiful visually
+<a href="https://fleur82.github.io/fleur82/" title="Github 내 웹사이트">새로 시작하기</a></p>.
 </body>
 </html>
